minor changes to jupyter notebooks

--- a/salesdata_analysis.ipynb
+++ b/salesdata_analysis.ipynb
@@ -541,7 +541,6 @@
     "\n",
     "sales_data = sales_data.dropna(how = 'all')\n",
     "\n",
-    "\n",
     "# remove rows which have column names as rows\n",
     "sales_data = sales_data[sales_data[\"Order ID\"] != \"Order ID\"]\n",
     "\n",
@@ -886,159 +885,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>product</th>\n",
-       "      <th>product_len</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12960</th>\n",
-       "      <td>2019-02-10 10:24:00</td>\n",
-       "      <td>160873</td>\n",
-       "      <td>[iPhone, Lightning Charging Cable, Apple Airpo...</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155122</th>\n",
-       "      <td>2019-12-01 22:49:00</td>\n",
-       "      <td>296353</td>\n",
-       "      <td>[iPhone, Lightning Charging Cable, Wired Headp...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21048</th>\n",
-       "      <td>2019-03-01 17:48:00</td>\n",
-       "      <td>165665</td>\n",
-       "      <td>[Google Phone, USB-C Charging Cable, Wired Hea...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137032</th>\n",
-       "      <td>2019-10-31 10:17:00</td>\n",
-       "      <td>263918</td>\n",
-       "      <td>[Vareebadd Phone, USB-C Charging Cable, Bose S...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56720</th>\n",
-       "      <td>2019-05-08 19:29:00</td>\n",
-       "      <td>196615</td>\n",
-       "      <td>[Google Phone, USB-C Charging Cable, Bose Soun...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168670</th>\n",
-       "      <td>2019-12-19 13:23:00</td>\n",
-       "      <td>304059</td>\n",
-       "      <td>[Lightning Charging Cable]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168662</th>\n",
-       "      <td>2019-12-19 13:13:00</td>\n",
-       "      <td>318411</td>\n",
-       "      <td>[Bose SoundSport Headphones]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168663</th>\n",
-       "      <td>2019-12-19 13:14:00</td>\n",
-       "      <td>305403</td>\n",
-       "      <td>[Google Phone]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168664</th>\n",
-       "      <td>2019-12-19 13:15:00</td>\n",
-       "      <td>301023</td>\n",
-       "      <td>[USB-C Charging Cable]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89218</th>\n",
-       "      <td>2019-07-18 00:39:00</td>\n",
-       "      <td>230538</td>\n",
-       "      <td>[AA Batteries (4-pack)]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>178437 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      date order_id  \\\n",
-       "12960  2019-02-10 10:24:00   160873   \n",
-       "155122 2019-12-01 22:49:00   296353   \n",
-       "21048  2019-03-01 17:48:00   165665   \n",
-       "137032 2019-10-31 10:17:00   263918   \n",
-       "56720  2019-05-08 19:29:00   196615   \n",
-       "...                    ...      ...   \n",
-       "168670 2019-12-19 13:23:00   304059   \n",
-       "168662 2019-12-19 13:13:00   318411   \n",
-       "168663 2019-12-19 13:14:00   305403   \n",
-       "168664 2019-12-19 13:15:00   301023   \n",
-       "89218  2019-07-18 00:39:00   230538   \n",
-       "\n",
-       "                                                  product  product_len  \n",
-       "12960   [iPhone, Lightning Charging Cable, Apple Airpo...            5  \n",
-       "155122  [iPhone, Lightning Charging Cable, Wired Headp...            4  \n",
-       "21048   [Google Phone, USB-C Charging Cable, Wired Hea...            4  \n",
-       "137032  [Vareebadd Phone, USB-C Charging Cable, Bose S...            4  \n",
-       "56720   [Google Phone, USB-C Charging Cable, Bose Soun...            4  \n",
-       "...                                                   ...          ...  \n",
-       "168670                         [Lightning Charging Cable]            1  \n",
-       "168662                       [Bose SoundSport Headphones]            1  \n",
-       "168663                                     [Google Phone]            1  \n",
-       "168664                             [USB-C Charging Cable]            1  \n",
-       "89218                             [AA Batteries (4-pack)]            1  \n",
-       "\n",
-       "[178437 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# # most brought together Items\n",
-    "\n",
-    "items = items.sort_values(by=\"product_len\", ascending = False)\n",
-    "\n"
+    "# exporting yearly data after cleaning.\n",
+    "sales_data.to_csv(\"yearly_sales_data.csv\", index=False)"
    ]
   },
   {
